--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,9 @@
-h1 {
-  color: red;
-}
+/* Common */
+
+@import "normalize.scss";
+@import "fonts.scss";
+@import "variables.scss";
+@import "scaffolding.scss";
+
+
+/* Blocks */
