--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -8,11 +8,14 @@ $pt-mono-font-stack: "PT Mono", "Courier New", monospace;
 /* Colors */
 
 $basic-white-color: #fafafa;
+$basic-extra-light-grey-color: #ebebeb;
 $basic-accent-blue-color: #00b2ff;
 $basic-blue-dark-color: #1b2d37;
 
 $text-white-color: #ffffff;
 $text-light-blue-grey-color: #788891;
+$text-middle-grey-color: #666666;
+
 
 /* Layouts */
 
