--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,3 +12,4 @@
 @import "blocks/main-header.scss";
 @import "blocks/logo.scss";
 @import "blocks/main-cover.scss";
+@import "blocks/advantages.scss";
