--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -9,13 +9,16 @@ $pt-mono-font-stack: "PT Mono", "Courier New", monospace;
 
 $basic-white-color: #fafafa;
 $basic-extra-light-grey-color: #ebebeb;
+$basic-light-grey-color: #cdcdcd;
 $basic-accent-blue-color: #00b2ff;
+$basic-extra-dark-cyan: #203c42;
 $basic-blue-dark-color: #1b2d37;
 
 $text-white-color: #ffffff;
 $text-light-blue-grey-color: #788891;
 $text-middle-grey-color: #666666;
 
+$border-middle-grey-color: rgba(98, 105, 98, 0.2);
 
 /* Layouts */
 
