--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,3 +13,9 @@
 @import "blocks/logo.scss";
 @import "blocks/main-cover.scss";
 @import "blocks/advantages.scss";
+@import "blocks/main-footer.scss";
+@import "blocks/socials.scss";
+@import "blocks/navigation.scss";
+@import "blocks/our-office.scss";
+@import "blocks/copyright.scss";
+@import "blocks/accordion.scss";
