--- a/source/sass/blocks/socials.scss
+++ b/source/sass/blocks/socials.scss
@@ -26,6 +26,12 @@
 
 .socials li {
   margin-right: 16px;
+
+  @media (max-width: $tablet-width-only) {
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 }
 
 .socials small {
@@ -39,13 +45,14 @@
   opacity: 0.5;
 
   @media (max-width: $tablet-width-only) {
-    margin-right: 73px;
+    margin-right: 71px;
+    padding-top: 5px;
     display: inline-block;
     order: -1;
   }
 
   @media (max-width: $mobile-width-only) {
-    margin-top: 26px;
+    margin-top: 11px;
     margin-right: 0;
   }
 }
