--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,3 +19,5 @@
 @import "blocks/our-office.scss";
 @import "blocks/copyright.scss";
 @import "blocks/accordion.scss";
+@import "blocks/line.scss";
+@import "blocks/about-us.scss";
