--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -8,6 +8,16 @@
   text-transform: uppercase;
 
   border-top: 1px solid $border-middle-grey-color;
+
+  @media (max-width: $tablet-width-only) {
+    margin-top: 35px;
+    padding: 21px 0;
+  }
+
+  @media (max-width: $mobile-width-only) {
+    margin-top: 26px;
+    padding-top: 3px;
+  }
 }
 
 .copyright p {
@@ -65,5 +75,7 @@
 
 .copyright__info,
 .copyright__years {
-  display: none;
+  @media (max-width: $tablet-width-only) {
+    display: none;
+  }
 }
