--- a/source/sass/blocks/our-office.scss
+++ b/source/sass/blocks/our-office.scss
@@ -8,6 +8,12 @@
   opacity: 0.5;
 }
 
+.our-office p {
+  @media (max-width: $mobile-width-only) {
+    padding-top: 5px;
+  }
+}
+
 .our-office a {
   color: inherit;
 
