--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -39,6 +39,7 @@
 
   @media (max-width: $tablet-width-only) {
     padding-top: 26px;
+    padding-bottom: 75px;
 
     &::after {
       top: -561px;
@@ -54,6 +55,7 @@
 
   @media (max-width: $mobile-width-only) {
     padding-top: 37px;
+    padding-bottom: 63px;
 
     &::before {
       display: none;
@@ -159,5 +161,9 @@
 
   &:active {
     opacity: 0.7;
+  }
+
+  @media (max-width: $mobile-width-only) {
+    margin-top: -10px;
   }
 }
