--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,3 +22,6 @@
 @import "blocks/line.scss";
 @import "blocks/about-us.scss";
 @import "blocks/services.scss";
+@import "blocks/report.scss";
+@import "blocks/feedback.scss";
+@import "blocks/modal-form.scss";
