--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -19,6 +19,8 @@ $text-light-blue-grey-color: #788891;
 $text-middle-grey-color: #666666;
 
 $border-middle-grey-color: rgba(98, 105, 98, 0.2);
+$background-field-color: rgba(255, 255, 255, 0.1);
+$background-modal-color: rgba(0, 0, 0, 0.5);
 
 /* Layouts */
 
