--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -132,6 +132,8 @@
   margin: 0;
   margin-top: 20px;
 
+  color: $text-middle-grey-color;
+
   @media (max-width: $tablet-width-only) {
     margin-top: 23px;
   }
