Делает плейсхолдер белым (фикс #101)

--- a/source/sass/blocks/report.scss
+++ b/source/sass/blocks/report.scss
@@ -49,6 +49,10 @@
   border: none;
   resize: none;
 
+  &::placeholder {
+    color: $text-white-color;
+  }
+
   &:focus,
   &:hover {
     outline: 1px solid $text-white-color;
