Исправляет жирность заголовка в футере (фикс #102)

--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -17,6 +17,7 @@
   font-family: $roboto-condensed-font-stack;
   font-size: 15px;
   line-height: 16px;
+  font-weight: 400;
   letter-spacing: 0.05em;
   text-transform: uppercase;
 }
