Ставит вертикальное выравнивание для блочно-строчных элементов (фикс #52)

--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -158,6 +158,7 @@
   letter-spacing: 0.05em;
   text-transform: uppercase;
   color: $basic-accent-blue-color;
+  vertical-align: top;
 
   border: 1px solid $basic-accent-blue-color;
   border-radius: 5px;
