--- a/source/sass/blocks/report.scss
+++ b/source/sass/blocks/report.scss
@@ -43,6 +43,7 @@
   padding: 14px 16px;
   width: 100%;
 
+  vertical-align: top;
   color: inherit;
 
   background-color: $background-field-color;
