--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -12,6 +12,8 @@
   height: 24px;
   display: none;
 
+  vertical-align: top;
+
   background-color: transparent;
   border: none;
   cursor: pointer;
