Вносит правки по баглисту (#5, #7, #10, #11, #13, #15, #20, #21)

--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -64,6 +64,12 @@
   }
 }
 
+.accordion:not(.accordion--nojs) h2 {
+  @media (max-width: $mobile-width-only) {
+    cursor: pointer;
+  }
+}
+
 .accordion--closed button {
   &::after {
     display: block;
