--- a/source/sass/blocks/main-cover.scss
+++ b/source/sass/blocks/main-cover.scss
@@ -253,9 +253,10 @@
 
   @media (max-width: $mobile-width-only) {
     margin-top: 40px;
-    margin-left: 1px;
-
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 286px;
+    display: block;
   }
 }
 
