--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -130,14 +130,40 @@
   }
 }
 
+.feedback__form input,
+.feedback__form textarea {
+  @media (max-width: $tablet-width-only) {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  @media (max-width: $mobile-width-only) {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+
 .feedback__agreement-field {
   width: 262px;
 
   @media (max-width: $tablet-width-only) {
+    margin-top: 49px;
+    padding-left: 38px;
     width: 273px;
   }
 
   @media (max-width: $mobile-width-only) {
+    margin-top: 24px;
+    padding-left: 32px;
     width: 100%;
+  }
+}
+
+.feedback__agreement-field label {
+  &::before {
+    @media (max-width: $tablet-width-only) {
+      top: 4px;
+      left: -34px;
+    }
   }
 }
