--- a/source/sass/blocks/modal-form.scss
+++ b/source/sass/blocks/modal-form.scss
@@ -49,7 +49,7 @@
 }
 
 .modal-form__field {
-  margin-top: 34px;
+  margin-top: 35px;
 }
 
 .modal-form__field input,
@@ -64,7 +64,7 @@
 }
 
 .modal-form__form button {
-  margin-top: 25px;
+  margin-top: 31px;
 }
 
 .modal-form__agreement-field {
@@ -83,15 +83,18 @@
 
 .modal-form__form + button {
   position: absolute;
-  top: 22px;
-  right: 20px;
+  top: 4px;
+  right: 4px;
 
   font-size: 0;
   vertical-align: top;
 
-  padding: 0;
-  width: 17px;
-  height: 17px;
+  padding: 16px;
+  width: 49px;
+  height: 49px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   cursor: pointer;
   border: none;
