--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -20,6 +20,11 @@
   font-weight: 400;
   letter-spacing: 0.05em;
   text-transform: uppercase;
+
+  @media (max-width: $mobile-width-only) {
+    padding-top: 29px;
+    padding-bottom: 28px;
+  }
 }
 
 .main-footer__inner {
@@ -82,7 +87,7 @@
 
   @media (max-width: $mobile-width-only) {
     margin-top: 46px;
-    padding-top: 29px;
+    padding-top: 0;
     width: 100%;
   }
 }
@@ -98,9 +103,9 @@
   }
 
   @media (max-width: $mobile-width-only) {
-    margin-top: 28px;
+    margin-top: 0;
     padding-left: 0;
-    padding-top: 28px;
+    padding-top: 0;
     width: 100%;
   }
 }
