--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -2,8 +2,8 @@
   position: relative;
   z-index: 2;
 
-  padding-top: 92px;
-  padding-bottom: 114px;
+  padding-top: 88px;
+  padding-bottom: 77px;
 
   &::after {
     position: absolute;
@@ -24,7 +24,7 @@
 
   @media (max-width: $tablet-width-only) {
     padding-top: 80px;
-    padding-bottom: 103px;
+    padding-bottom: 100px;
 
     &::after {
       display: none;
@@ -37,14 +37,53 @@
   }
 }
 
-.feedback h2,
-.feedback p,
-.feedback__form {
-  margin-left: auto;
-  margin-right: 122px;
-  width: 570px;
+.feedback__container {
+  padding-left: 0;
+  max-width: 1665px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+
+  &::before {
+    margin-top: 5px;
+    margin-left: 10px;
+    margin-right: 114px;
+    width: 686px;
+    height: 500px;
+
+    content: "";
+
+    background-image: url("../img/paper-airplane.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position-y: center;
+
+    @media (min-resolution: 1.5dppx) {
+      background-image: url("../img/paper-airplane@2x.png");
+    }
+  }
 
   @media (max-width: $tablet-width-only) {
+    padding-left: 28px;
+    display: block;
+
+    &::before {
+      display: none;
+    }
+  }
+
+  @media (max-width: $mobile-width-only) {
+    padding-left: 17px;
+  }
+}
+
+.feedback__wrapper {
+  margin-right: 237px;
+  width: 570px;
+  flex-shrink: 0;
+
+  @media (max-width: $tablet-width-only) {
+    margin-left: auto;
     margin-right: auto;
     width: 590px;
   }
@@ -60,33 +99,12 @@
   flex-direction: row;
   align-items: flex-start;
 
-  &::before {
-    position: absolute;
-    top: -231px;
-    left: -801px;
-
-    width: 686px;
-    height: 641px;
-
-    content: "";
-
-    background-image: url("../img/paper-airplane.png");
-    background-size: 686px auto;
-    background-repeat: no-repeat;
-    background-position: center center;
-
-    @media (min-resolution: 1.5dppx) {
-      background-image: url("../img/paper-airplane@2x.png");
-    }
-  }
-
   @media (max-width: $tablet-width-only) {
-    &::before {
-      display: none;
-    }
+    padding-top: 5px;
   }
 
   @media (max-width: $mobile-width-only) {
+    padding-top: 0;
     flex-direction: column;
   }
 }
@@ -102,7 +120,7 @@
 
 .feedback__username-field {
   margin-right: auto;
-  margin-top: 54px;
+  margin-top: 51px;
 
   @media (max-width: $mobile-width-only) {
     margin-top: 27px;
@@ -110,7 +128,7 @@
 }
 
 .feedback__phone-field {
-  margin-top: 54px;
+  margin-top: 51px;
 
   @media (max-width: $mobile-width-only) {
     margin-top: 27px;
