--- a/source/sass/blocks/modal-form.scss
+++ b/source/sass/blocks/modal-form.scss
@@ -18,6 +18,15 @@
     display: flex;
   }
 
+  &--inner {
+    position: static;
+
+    margin-top: 20px;
+    margin-bottom: 40px;
+
+    background-color: transparent;
+  }
+
   @media (max-width: $mobile-width-only) {
     align-items: flex-start;
   }
