--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -10,10 +10,10 @@
 .accordion button {
   position: absolute;
   top: 0;
-  left: 0;
+  left: -17px;
 
   padding: 4px;
-  width: 100%;
+  width: calc(100% + 2 * 17px);
   height: 100%;
   display: none;
 
@@ -27,7 +27,7 @@
   &::after {
     position: absolute;
     top: 4px;
-    right: 0;
+    right: 17px;
 
     width: 16px;
     height: 16px;
@@ -45,7 +45,7 @@
 
   &::after {
     top: 29px;
-    right: 7px;
+    right: calc(7px + 17px);
 
     width: 1px;
     display: none;
